--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,14 @@
     <string name="satellite">Satellite View</string>
     <string name="google_maps_key">AIzaSyB5MNUYxJ4TAHNXnWa-hijPkWmDqZiA8O4</string>
     <string name="action_settings">Settings</string>
+    <string name="open_weather_maps_app_id">bc7e9c82f8a5d137333e6a3ab20530ff</string>
+    <string name="place_not_found">Sorry, no weather data found.</string>
+    <string name="weather_sunny">&#xf00d;</string>
+    <string name="weather_clear_night">&#xf02e;</string>
+    <string name="weather_foggy">&#xf014;</string>
+    <string name="weather_cloudy">&#xf013;</string>
+    <string name="weather_rainy">&#xf019;</string>
+    <string name="weather_snowy">&#xf01b;</string>
+    <string name="weather_thunder">&#xf01e;</string>
+    <string name="weather_drizzle">&#xf01c;</string>
 </resources>
